--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
-.App{
-    
+.route-with-sidebar{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    background: #F5F6FA;
+    height: 100lvh;
 }
