--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,10 +2,16 @@
     background: #ffffff;
     width: 283px;
     height: 100%;
+    overflow-y: scroll;
+
+
+    // Hide scrollbar in WebKit browsers (Chrome, Safari, Edge)
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     .logoContainer{
         height: 100px;
-        width: 100%;
         display: flex;
         align-items: center;
         padding: 0 25px;
@@ -13,6 +19,7 @@
         img{
             width: 144.8px;
             height: 35px;
+            display: none;
         }
     }
 
@@ -40,6 +47,68 @@
         cursor: pointer;
         margin-top: 30px;
         text-transform: capitalize;
+    }
+
+    .sectionDiv{
+        display: flex;
+        flex-direction: column;
+        align-self: start;
+        justify-content: center;
+
+        >h6{
+            font-weight: 500;
+            font-size: 12px;
+            letter-spacing: 0;
+            line-height: 100%;
+            color: rgba(84, 95, 125, 1);
+            text-transform: uppercase;
+            margin-bottom: 8px;
+            padding: 0 0 0 25px;
+        }
+
+        ul{
+            list-style-type: none;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+
+            li{
+                padding: 0 25px;
+                height: 40px;
+                display: flex;
+                align-items: center;
+                gap: 7px;
+                cursor: pointer;
+                position: relative;
+                font-weight: 400px;
+                font-size: 16px;
+                line-height: 100%;
+                letter-spacing: 0;
+                color: rgba(33, 63, 125, 1);
+
+                span{
+                    font-weight: 400px;
+                    font-size: 16px;
+                    line-height: 100%;
+                    letter-spacing: 0;
+                    color: #213f7d;
+                    text-transform: capitalize;
+                }
+
+                &.active::after{
+                    content: "";
+                    position: absolute;
+                    background: #39CDCC;
+                    width: 3px;
+                    height: 40px;
+                    left: 0;
+                }
+
+                &.active{
+                  background: rgba(57, 205, 204, 0.1);
+                }
+            }
+        }
     }
 
 }
