--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -3,25 +3,8 @@
     width: 283px;
     height: 100%;
     overflow-y: scroll;
+    padding-top: 25px;
 
-
-    // Hide scrollbar in WebKit browsers (Chrome, Safari, Edge)
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    .logoContainer{
-        height: 100px;
-        display: flex;
-        align-items: center;
-        padding: 0 25px;
-
-        img{
-            width: 144.8px;
-            height: 35px;
-            display: none;
-        }
-    }
 
     .switchType{
         display: flex;
