--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,8 +2,14 @@
     background: #ffffff;
     width: 283px;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-top: 25px;
+    transition: all 0.3s ease;
+
+  &.sidebar-open {
+    transform: translateX(0);
+  }
+
 
 
     .switchType{
@@ -28,9 +34,18 @@
         color: rgba(33, 63, 125, 1);
         padding: 0 25px;
         cursor: pointer;
-        margin-top: 30px;
         text-transform: capitalize;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 7px;
     }
+
+    // Add to Sidebar.scss
+    .iconOnly {
+    font-size: 20px;
+    }
+
 
     .sectionDiv{
         display: flex;
