--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .NavbarWrapper {
-  height: 60px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -74,6 +74,7 @@
     .login-img {
       width: 144.8px;
       height: 30px;
+      object-fit: contain;
     }
   }
 
@@ -124,6 +125,8 @@
 // Tablet
 @media (min-width: 769px) and (max-width: 1024px) {
   .NavbarWrapper {
+    height: 80px;
+    
     .first-Div {
       .searchForm {
         width: 240px;
@@ -141,6 +144,7 @@
 @media (max-width: 768px) {
   .NavbarWrapper {
     padding: 0 15px;
+    
 
     .hamburger {
       display: block;
