--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,12 +1,37 @@
 .DashboardWrapper{
-    padding: 3%;
+    padding-top: 3%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-y: auto;
 
-    >.title{
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 100%;
-        letter-spacing: 0;
-        color: #213F7D;
+    >.actData{
+        width: 100%;
+        max-width: 1037px;
+    }
+}
+
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .DashboardWrapper{
+        padding: 0;
+
+        >.actData{
+            width: 100%;
+            max-width: 750px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .DashboardWrapper{
+        padding: 0 ;
+
+        >.actData{
+            width: 100%;
+            max-width: 480px;
+        }
     }
 }
