--- a/src/components/UsersData/UsersData.scss
+++ b/src/components/UsersData/UsersData.scss
@@ -3,25 +3,31 @@
   display: flex;
   flex-direction: column;
   font-family: 'Inter', sans-serif;
+  position: relative;
 
   .dropdownWrapper {
     position: relative;
     display: inline-block;
-    z-index: 1001;
 
     .dropdownMenu {
         position: absolute;
         background: #fff;
         top: calc(100% + 5px); 
         right: 0;
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(33, 63, 125, 0.2);
-        min-width: 120px;
+        min-width: 180px;
+        height: 130px;
         overflow: visible; /* Prevent clipping */
         transition: opacity 0.2s ease, transform 0.2s ease;
         opacity: 0;
         transform: translateY(-10px);
         pointer-events: none;
+        z-index: 1200;
+
+        .dropdownMenuContainer{
+          background: #fff;
+          border-radius: 8px;
+          box-shadow: 0 4px 12px rgba(33, 63, 125, 0.2);
+        }
 
 
       &.open {
@@ -34,9 +40,17 @@
       .dropdownItem {
         padding: 10px 16px;
         font-size: 14px;
-        color: #213f7d;
+        font-weight: 500;
+        line-height: 100%;
+        letter-spacing: 0;
+        color: #545F7D;
         cursor: pointer;
         transition: background 0.2s ease;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 8px;
 
         &:hover {
           background: #f8fafc;
@@ -92,6 +106,10 @@
       }
 
       tbody {
+          .mobileHeaderDiv{
+              display: none;
+          }
+
         tr {
           border-bottom: 1px solid #f1f5f9;
           transition: background-color 0.2s ease;
@@ -336,6 +354,40 @@
         }
 
         tbody {
+          .mobileHeaderDiv{
+              display: flex;
+              justify-content: space-between;
+              padding: 20px 5px;
+
+              form input{
+                all: unset;
+                border-radius: 8px;
+                width: 100%;
+                height: 40px;
+                max-width: 220px;
+                border: 1px solid rgba(33, 63, 125, 0.1);
+                background: #ffffff;
+                padding: 0 0 0 10px; 
+                display: flex;
+                align-items: center;
+
+                &::placeholder{
+                    color: rgba(84, 95, 125, 1);
+                    font-size: 14px;
+                    line-height: 100%;
+                    letter-spacing: 0;
+                    text-transform: capitalize;
+                }
+              }
+
+              .mobileFilterIcon{
+                opacity: 60%;
+                cursor: pointer;
+                font-size: 22px;
+              }
+            }
+
+
           tr {
             border-bottom: none;
             display: block;
@@ -394,10 +446,12 @@
                   max-height: 0;
                   overflow: visible;
                   transition: max-height 0.3s ease, padding 0.3s ease;
+                  display: none;
 
                   &.expanded {
                     max-height: 300px;
                     padding: 12px;
+                    display: block;
                   }
 
                   .mobileCardDetails {
