--- a/src/components/UsersData/UsersData.scss
+++ b/src/components/UsersData/UsersData.scss
@@ -5,6 +5,10 @@
   font-family: 'Inter', sans-serif;
   position: relative;
 
+  .hoverLink:hover{
+    text-decoration: underline;
+  }
+
   .dropdownWrapper {
     position: relative;
     display: inline-block;
@@ -113,6 +117,7 @@
         tr {
           border-bottom: 1px solid #f1f5f9;
           transition: background-color 0.2s ease;
+          cursor: pointer;
 
           &:hover {
             background-color: #f9fafb;
@@ -146,6 +151,7 @@
               display: inline-flex;
               align-items: center;
               transition: transform 0.2s ease;
+              max-width: 90px;
 
               &.active {
                 background: linear-gradient(45deg, rgba(57, 205, 98, 0.15), rgba(57, 205, 98, 0.3));
@@ -416,6 +422,7 @@
                   padding: 12px;
                   cursor: pointer;
                   background: linear-gradient(180deg, #f8fafc 0%, #ffffff 100%);
+                  padding-bottom: 10px;
 
                   .mobileCardMain {
                     display: flex;
@@ -426,12 +433,17 @@
                       font-size: 14px;
                       font-weight: 600;
                       color: #213f7d;
+                      margin-bottom: 5px;
                     }
 
                     .status {
                       padding: 4px 8px;
                       font-size: 12px;
                       border-radius: 10px;
+                      max-width: 80px;
+                      text-align: center;
+                      display: flex;align-items: center;
+                      justify-content: center;
                     }
                   }
 
