--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -3,7 +3,7 @@
     width: 283px;
     height: 100%;
     overflow-y: auto;
-    padding-top: 25px;
+    padding-top: 30px;
     transition: all 0.3s ease;
 
   &.sidebar-open {
@@ -15,7 +15,7 @@
     .switchType{
         display: flex;
         align-items: center;
-        padding: 0 25px;
+        padding: 25px;
         font-size: 16px;
         line-height: 100%;
         letter-spacing: 0;
@@ -23,6 +23,7 @@
         color: rgba(33, 63, 125, 1);
         gap: 4px;
         cursor: pointer;
+        margin-bottom: 5px;
     }
 
     .dashboardText{
@@ -32,7 +33,7 @@
         line-height: 100%;
         font-size: 16px;
         color: rgba(33, 63, 125, 1);
-        padding: 0 25px;
+        padding: 20px 25px;
         cursor: pointer;
         text-transform: capitalize;
         display: flex;
@@ -43,7 +44,7 @@
 
     // Add to Sidebar.scss
     .iconOnly {
-    font-size: 20px;
+        font-size: 20px;
     }
 
 
@@ -60,8 +61,8 @@
             line-height: 100%;
             color: rgba(84, 95, 125, 1);
             text-transform: uppercase;
-            margin-bottom: 8px;
-            padding: 0 0 0 25px;
+            margin-bottom: 10px;
+            padding: 25px 0 10px 25px;
         }
 
         ul{
@@ -71,7 +72,7 @@
             flex-direction: column;
 
             li{
-                padding: 0 25px;
+                padding: 25px;
                 height: 40px;
                 display: flex;
                 align-items: center;
