--- a/src/components/UsersData/UsersData.scss
+++ b/src/components/UsersData/UsersData.scss
@@ -398,6 +398,7 @@
             border-bottom: none;
             display: block;
             margin-bottom: 12px;
+            cursor: none;
 
             td {
               padding: 0;
@@ -420,7 +421,6 @@
                   justify-content: space-between;
                   align-items: center;
                   padding: 12px;
-                  cursor: pointer;
                   background: linear-gradient(180deg, #f8fafc 0%, #ffffff 100%);
                   padding-bottom: 10px;
 
