--- a/src/modal/FilterForm/FilterForm.scss
+++ b/src/modal/FilterForm/FilterForm.scss
@@ -9,6 +9,7 @@
     border: 1px solid rgba(84, 95, 125, 0.14);
     box-shadow: 0 3px 20px rgba(0,0,0,0.04);
     z-index: 1000;
+    padding: 15px 0;
 
     .filterModalContent{
         padding: 20px;
@@ -17,6 +18,7 @@
         label{
             display: flex;
             flex-direction: column;
+            margin-bottom: 18px;
             gap: 0;
             width: 100%;
 
